<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.main.MainActivityImpl">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/main_activity_tool_bar_color"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <!--TODO: possibly, provide a simple layout as com.github.android.lvrn.lvrnproject.view.fragments container instead of including -->
        <include layout="@layout/partial_content_main" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/floating_action_menu_all_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_menu_share"
            fab:fab_addButtonColorNormal="@color/fab_colorNormal"
            fab:fab_addButtonColorPressed="@color/fab_colorPressed"
            fab:fab_addButtonPlusIconColor="@color/cardview_light_background"
            fab:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_btn_start_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/fab_colorNormal"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_start_note"
                fab:fab_icon="@drawable/ic_menu_file_white_24dp"
                fab:fab_colorPressed="@color/fab_colorPressed"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_btn_start_notebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/fab_colorNormal"
                fab:fab_icon="@drawable/ic_menu_book_white_24dp"
                fab:fab_title="@string/fab_start_notebook"
                fab:fab_colorPressed="@color/fab_colorPressed"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
