<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stat_search_black_24dp"
        android:title="sync"
        app:showAsAction="always" />

</menu>