...
                    android:id="@+id/tab_editor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_text_editor"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:scrollbars="vertical"
                        android:gravity="top|start"
...
